--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+body {
+  margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden; 
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6, p, ul, ol, dl, figure, blockquote {
+  margin: 0;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 
